--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,9 @@
 body{
+    height: 100%;
     margin: 0;
+    padding: 0;
     min-height: 100vh;    
+    overflow: hidden;
     background: linear-gradient(
         to top,
         #170000 0%,
@@ -17,23 +20,9 @@ body{
     );
 }
 
-.logoH2C {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding-top: 150px;
-    
-}
-
-.msg{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-}
 .msg h3{
     color: #FFFFFF;
-    font-size: 20px;
+    font-size: 1.2rem;
     font-family: "Montserrat";
     font-weight: 400;
     
@@ -41,40 +30,36 @@ body{
 
 .msg h5{
     color: #FFFFFF;
-    font-size: 20px;
+    font-size: 1.2rem;
     font-family: "Montserrat";
     font-weight: 200;
 }
 
-.imgFondo {
-    position: fixed;
-    top: -150px;
-    left: 50px;
-    width: 500px;
-    height: 500px;
-    background-image: url('../img/32.png');
+.imgFondo , .imgFondo2 {
+    position: absolute;
     background-repeat: no-repeat;
-    background-position: center,center;
     background-size: cover;
-    opacity: 0.2;
+    pointer-events: none;
     z-index: -1;
+    opacity: 0.2;
+}
 
+.imgFondo {
+    top: 0;
+    background-image: url('../img/32.png');
+    top: -15vh;
+    right: -3vh;
+    width: clamp(400px, 30vw, 800px);
+    height: clamp(400px, 30vw, 800px);
+    
 }
 
 .imgFondo2 {
-    position: fixed;
-    bottom: -150px;
-    right: 50px;
-    width: 500px;
-    height: 500px;
+    bottom: 0;
     background-image: url('../img/32.png');
-    background-repeat: no-repeat;
-    background-position: center,center;
-    background-size: cover;
-    opacity: 0.2;
-    z-index: -1;
+    bottom: -15vh;
+    left: -3vh;
+    width: clamp(400px, 30vw, 800px);
+    height: clamp(400px, 30vw, 800px);
     transform:scale(-1) ;
-
 }
-
-
