--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -23,6 +23,7 @@ body {
     overflow-x: hidden;
     display: flex;
     flex-direction: column;
+    padding-bottom: 3rem;
 }
 
 /* Fondo fijo, sin afectar flujo */
@@ -246,4 +247,23 @@ body {
     font-size: 1.6vh;
     font-weight: 600;
     color: #929292;
+}
+
+.menu {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    max-width: 100vw;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    border-top: 1px solid #929292;
+    padding: 0.5rem 0;
+    z-index: 1000;
+    background-color: #FBF6F6;
+}
+
+.menu a {
+    font-size: 1.5rem;
 }
