--- a/css/styleNotificaciones.css
+++ b/css/styleNotificaciones.css
@@ -61,7 +61,7 @@ h3 {
     border-top: 1px solid #929292;
     padding: 0.5rem 0;
     z-index: 1000;
-    background-color: #FBF6F6;
+    background-color: white;
 }
 
 .menu a {
