--- a/css/styleCalendario.css
+++ b/css/styleCalendario.css
@@ -1,3 +1,4 @@
+
 * {
     font-family: "Montserrat";
 }
@@ -211,7 +212,6 @@ h3 {
     bottom: 0;
     left: 0;
     width: 100%;
-    max-width: 100vw;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -258,6 +258,7 @@ h3 {
     flex-direction: column;
     align-items: center;
     width: 100%;
+    margin-bottom: 4rem;
 }
 
 .tarjeta {
@@ -282,6 +283,8 @@ h3 {
     font-size: 14px;
     font-weight: 500;
     margin-bottom: 0.3rem;
+    width: 4rem;
+    text-align: center;
 }
 
 .info p {
@@ -330,6 +333,7 @@ h3 {
 .dia {
     text-align: center;
     margin-top: 0.8rem;
+    font-weight: 600;
 }
 
 .info {
@@ -341,3 +345,11 @@ h3 {
     color: #F48C06;
 }
 
+.ticketsen {
+    margin-bottom: 0.5rem;
+}
+
+.cal-dates div.selected-date {
+    background-color: #6A040F; /* Or any color to highlight the selected date */
+    color: white;
+}
